Ejercicios de Mensajes en Struts 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /HolaMundoTrust/target/
 /ConvencionesStruts/target/
 /PersonasStruts2/target/
+/PersonasStruts2Mensajes/target/
+/LoginStruts2/target/
