Anotaciones, Validaciones , resultados y tags

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /PersonasStruts2/target/
 /PersonasStruts2Mensajes/target/
 /LoginStruts2/target/
+/LoginStruts2Results/target/
+/LoginStruts2Anotaciones/target/
+/LoginStruts2Validaciones/target/
+/PersonaStruts2/target/
