internacionalizacion y manejo de tiles 2

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /LoginStruts2Anotaciones/target/
 /LoginStruts2Validaciones/target/
 /PersonaStruts2/target/
+/PersonaStruts2Internacionalizacion/target/
+/PersonaStruts2Tiles/target/
