--- a/PersonaStruts2Internacionalizacion/pom.xml
+++ b/PersonaStruts2Internacionalizacion/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>mauriz.fran</groupId>
-    <artifactId>PersonaStruts2</artifactId>
+    <artifactId>PersonaStruts2Internacionalizacion</artifactId>
     <version>1</version>
     <packaging>war</packaging>
-    <name>PersonaStruts2</name>
+    <name>PersonaStruts2Internacionalizacion</name>
     
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
