--- a/PersonaStruts2Tiles/pom.xml
+++ b/PersonaStruts2Tiles/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>mauriz.fran</groupId>
-    <artifactId>PersonaStruts2</artifactId>
+    <artifactId>PersonaStruts2Tiles</artifactId>
     <version>1</version>
     <packaging>war</packaging>
-    <name>PersonaStruts2</name>
+    <name>PersonaStruts2Tiles</name>
     
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -41,6 +41,11 @@
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-convention-plugin</artifactId>
+            <version>2.5.22</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-tiles-plugin</artifactId>
             <version>2.5.22</version>
         </dependency>
     </dependencies>
