Acciones basicaas con Hibernate y Primer Ejemplo de HibernateWebJPA

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /PersonaStruts2Internacionalizacion/target/
 /PersonaStruts2Tiles/target/
 /HibernateEjemploUno/target/
+/HibernateEjemploDos/target/
+/PersonasWebHibernateJPA/target/
