Aplicacion de prueba con Hibernate

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /HibernateEjemploDos/target/
 /PersonasWebHibernateJPA/target/
 /SgaWebHibernateJPA/target/
+/SgaWebHibernateJPACascade/target/
+/SgaWebHibernateJPAALL/target/
